== 0.5.4

* deprecations
  * Deprecate :singular in devise_for and use :scope instead

* enhancements
  * [#37] Create after_sign_in_path_for and after_sign_out_path_for hooks to be
    overwriten in ApplicationController
  * Create sign_in_and_redirect and sign_out_and_redirect helpers
  * Warden::Manager.default_scope is automatically configured to the first given scope

== 0.5.3

* bug fix
  * MongoMapper now converts DateTime to Time
  * Ensure all controllers are unloadable

* enhancements
  * [#35] Moved friendly_token to Devise
  * Added Devise.all, so you can freeze your app strategies
  * Added Devise.apply_schema, so you can turn it to false in Datamapper or MongoMapper
    in cases you don't want it be handlded automatically

== 0.5.2

* enhancements
  * [#28] Improved sign_in and sign_out helpers to accepts resources
  * [#28] Added stored_location_for as a helper
  * [#20] Added test helpers

== 0.5.1

* enhancements
  * Added serializers based on Warden ones
  * Allow authentication keys to be set

== 0.5.0

* bug fix
  * Fixed a bug where remember me module was not working properly

* enhancements
  * Moved encryption strategy into the Encryptors module to allow several algorithms (by github.com/mhfs)
  * Implemented encryptors for Clearance, Authlogic and Restful-Authentication (by github.com/mhfs)
  * Added support for MongoMapper (by github.com/shingara)

== 0.4.3

* bug fix
  * [#29] Authentication just fails if user cannot be serialized from session, without raising errors;
  * Default configuration values should not overwrite user values;

== 0.4.2

* deprecations
  * Renamed mail_sender to mailer_sender

* enhancements
  * skip_before_filter added in Devise controllers
  * Use home_or_root_path on require_no_authentication as well
  * Added devise_controller?, useful to select or reject filters in ApplicationController
  * Allow :path_prefix to be given to devise_for 