@@ -1,3 +1,7 @@
+* enhancements
+
+  * Allow overwriting find for authentication method
+
 == 0.5.4
 
 * deprecations
@@ -59,7 +63,7 @@
   * skip_before_filter added in Devise controllers
   * Use home_or_root_path on require_no_authentication as well
   * Added devise_controller?, useful to select or reject filters in ApplicationController
-  * Allow :path_prefix to be given to devise_for 
+  * Allow :path_prefix to be given to devise_for
   * Allow default_url_options to be configured through devise (:path_prefix => "/:locale" is now supported)
 
 == 0.4.1
